tests/invalid/depth08.h
#include "depth09.h"
